# minsem

./: README.md  debug.md  erlang_ls.config  rebar.config
.github/workflows/: erlang.yml
apps/01minsem/: README.md
apps/01minsem/src/: minsem.app.src  minsem.erl
apps/01minsem/test/: prop_product.erl  prop_ty.erl
apps/02basesem/: README.md
apps/02basesem/src/: basesem.app.src  basesem.erl  pretty.erl  utils.erl
apps/03puresem/src/: puresem.app.src  puresem.erl
apps/04sharesem/src/: sharesem.app.src  sharesem.erl
apps/05purefunsem/src/: purefunsem.app.src  purefunsem.erl
apps/minsem/src/: minsem.erl
apps/minsem/test/: prop_dnf_product.erl
haskell/: .hlint.yaml  CHANGELOG.md  LICENSE  README.md  cduce_test_cases.txt  haskell-minsem.cabal  stack.yaml
haskell/src/: AllTests.hs  BasicTests.hs  CduceTestGen.hs  CduceTests.hs  Iface.hs  Main.hs  Minsem.hs  Pretty.hs  Trace.hs  Ty.hs  Utils.hs
src/: minsem.app.src  minsem.erl
test/: test_ast.erl
