cabal-version:      3.0
name:               haskell-minsem
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Stefan Wehr
maintainer:         stefan.wehr@hs-offenburg.de
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Werror -W -fwarn-unused-imports -fwarn-unused-binds -fwarn-orphans
       -fwarn-unused-matches -fwarn-unused-do-bind -fwarn-wrong-do-bind
       -fwarn-missing-signatures -fno-warn-partial-type-signatures
       -Wredundant-constraints -fwarn-incomplete-patterns

executable Minsem
    import:           warnings
    main-is:          Main.hs
    other-modules:
        BasicTests,
        Iface,
        Minsem,
        Pretty,
        Trace,
        Ty,
        Utils
    build-depends:
        base ^>=4.16.4.0,
        hashable,
        mtl,
        prettyprinter,
        QuickCheck,
        text,
        time,
        unordered-containers
    hs-source-dirs:   src
    default-language: GHC2021

